# SuccsessContent

./: .gitignore  .pre-commit-config.yaml  .pylintrc  MANIFEST.in  Makefile  Pipfile  README.md  __main__.py  custom_storage.py  main.kv  main.py  module_dir.py  pyproject.toml  requirements.txt  setup.cfg
Havau/: __main__.py  custom_storage.py  local_run.py  main.py  module_dir.py
Havau/docs/: conf.py  index.rst
Havau/tests/: simple_ui_test.py  storage_test.py
Havau/widgets/custom_widgets/: description.py
Havau/widgets/greeting_card/: __init__.py  description.kv
Havau/widgets/mood_screen/: __init__.py  description.py
docs/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/html/_modules/: custom_widgets.html  index.html  main.html  mood_rating.html  mood_screen.html
docs/source/: conf.py  index.rst
documentation/: Readme.md
documentation/source/: config.py  display.py  formula.py  k.txt  main.py
garden_matplotlib/: backend_kivy.py  backend_kivyagg.py
kivy_example/: example.py
locales/: main.pot  mood_screen.pot
tests/: init_test.py  rating_system_test.py  simple_ui_test.py  storage_test.py
translation_project_example/src/: example.py  test.py
widgets/custom_widgets/: __init__.py  description.kv  description.py
widgets/greeting_card/: description.kv  description.py
widgets/hello_screen/: __init__.py  description.kv  description.py
widgets/mood_rating/: __init__.py  description.kv  description.py
widgets/mood_screen/: description.kv  description.py
(+30 files in other folders)
