[metadata]
name = success_content
version = 0.0.1
author = 'Temirlan Bidjiev, Ivan Lozinskii, George Nanyan'
author_email = 'ivan@ya-email.ru'
description = Assistant in the evaluation of the past day
long_description = file: README.md
project_urls =
    Bug Tracker = https://github.com/gregory6316/SuccsessContent/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = .
include_package_data = True
install_requires =
   Kivy==2.1.0
   kivymd==0.104.2
   matplotlib==3.5.2
   python-gettext==4.0

[options.entry_points]
console_scripts =
    }{avau  = main:main

[options.package_data]
success_content = */*/*/*.mo
